@@ -1,7 +1,10 @@
 #Global Properties DO NOT change this
+VNB=1999
 Version=v2.0 BETA 1
 AppTitle=RoFage
 #English properties -> Default language
+Update.newVersionAvailable=A new version is available, please upgrade to the latest version
+Update.newVersionAvailableTitle=Please upgrade
 SiteConnector.1=This login is already used. Please choose another one
 SiteConnector.2=Account created successfully ! :)
 SiteConnector.3=You have logged in successfully :)
